--- a/posts/making_of.bib
+++ b/posts/making_of.bib
@@ -5,3 +5,68 @@
    url = "https://en.wikipedia.org/w/index.php?title=Backstory&oldid=666312396",
    note = "[Online; accessed 27-September-2015]"
  }
+
+@book{kim1976events,
+  title={Events as property exemplifications},
+  author={Kim, Jaegwon},
+  year={1976},
+  publisher={Springer}
+}
+
+@book{clocksin2003programming,
+  title={Programming in PROLOG},
+  author={Clocksin, William and Mellish, Christopher S},
+  year={2003},
+  publisher={Springer Science \& Business Media}
+}
+
+@book{martin2014clean,
+  title={Clean Coder},
+  author={Martin, Robert C},
+  year={2014},
+  publisher={mitp Verlags GmbH \& Co. KG}
+}
+
+@book{campbell2008hero,
+  title={The hero with a thousand faces},
+  author={Campbell, Joseph},
+  volume={17},
+  year={2008},
+  publisher={New World Library}
+}
+
+@book{vogler2007writer,
+  title={The Writer's journey},
+  author={Vogler, Christopher},
+  year={2007},
+  publisher={Michael Wiese Productions}
+}
+
+@article{knopf2013rationalist,
+  title={The Rationalist’s Spirituality: Campbell’s Monomyth in Single-Player Role-Playing Videogames Skyrim \& Mass Effect},
+  author={Knopf, Ehsan and others},
+  year={2013},
+  publisher={University of Sydney.}
+}
+
+@phdthesis{wrisinger2014link,
+  title={"Linking monomyth and video games: how The Legend of Zelda connects myth to modern media},
+  author={Wrisinger, Carli},
+  year={2014}
+}
+
+@phdthesis{ngamgamol2014narrative,
+  title={A NARRATIVE ANALYSIS OF ASSASSIN’S CREED GAMING SERIES},
+  author={Ngamgamol, Apirath},
+  year={2014},
+  school={National Institute of Development Administration}
+}
+
+@article{plutchik1984emotions,
+  title={Emotions: A general psychoevolutionary theory},
+  author={Plutchik, Robert},
+  journal={Approaches to emotion},
+  volume={1984},
+  pages={197--219},
+  year={1984}
+}
